--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
 <head>
 	<meta charset="UTF-8">
 	<title>GitHub Pages のサンプルです</title>
+	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<h1>GitHub Pages sample</h1>
+	<button>Javascript Test</button>
+
+	<script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
+	<script src="js/script.js"></script>
 </body>
 </html>
