--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<h1>GitHub Pages sample</h1>
-	<h2>test</h2>
+	<h2>テスト</h2>
 	<button>Javascript Test</button>
 
 	<script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
